# assistant_axelis

./: .env  .env.template  Dockerfile  QUICK_START.md  docker-compose.yml  pyproject.toml
configs/: alerts.yaml  logging.yaml  monitoring.yaml
configs/nginx/: base.conf  coris.conf  nginx.conf
configs/prometheus/: prometheus.yml
deployment/: deploy_production.sh
deployment/docker/: docker-compose.prod.yml
deployment/scripts/: deploy.sh  maintenance.sh
docs/api/: mobile_integration.md
docs/architecture/: overview.md
monitoring/: coris_dashboard.json
scripts/: final_system_test.py  init_databases.py  init_knowledge_bases.py  production_checklist.py  seed_data.py  start_system.py  test_complete_system.py
src/: main.py
src/agents/: base_agent.py  crew_setup.py
src/agents/applications/coris_money/: banking_operations.yaml
src/agents/config/: agents.yaml  crews.yaml  tasks.yaml
src/agents/core/: customer_service.yaml
src/applications/coris_money/apis/: chat.py  webhooks.py
src/applications/coris_money/config/: agents_config.yaml  api_config.yaml  app_packs.yaml
src/applications/coris_money/config/filiales/: coris_bf.yaml  coris_ci.yaml
src/applications/future_app/config/: app_packs.yaml
src/core/auth/: middleware.py  models.py
src/core/conversation/: manager.py
src/core/database/: connections.py
src/core/escalation/: context_builder.py  detector.py  router.py
src/core/knowledge_base/: chroma_manager.py  document_processor.py  embeddings.py
src/core/monitoring/: metrics.py
src/core/packs/: manager.py
src/core/packs/config/: base_packs.yaml  feature_mapping.yaml
src/tools/applications/coris_money/: banking_apis.py
src/tools/core/: nlp_tools.py
src/tools/mcp_tools/: datawarehouse.py  knowledge_base.py  reclamations.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_escalation.py  test_packs_manager.py
